# clip_service

./: .pre-commit-config.yaml  Dockerfile  README.md  app.json  clip_service.py  pyproject.toml  requirements.txt
clip_service/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
clip_service/services/: __init__.py
clip_service/services/clip_models/: clip_service.py  dependency.py  lifetime.py
clip_service/services/clip_onnx/: __init__.py  cliponnx.py
clip_service/tests/: __init__.py  test_echo.py
clip_service/web/: __init__.py  application.py  lifetime.py
clip_service/web/api/: __init__.py  router.py
clip_service/web/api/clip_endpoint/: __init__.py  schema.py  views.py
clip_service/web/api/docs/: __init__.py
clip_service/web/api/monitoring/: __init__.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
